--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
-    "@sentry/nextjs": "^7.112.2",
+    "@radix-ui/react-toast": "^1.2.11",
+    "@sentry/nextjs": "^7.120.3",
     "chart.js": "^4.4.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -37,6 +38,7 @@
     "zod": "^3.23.4"
   },
   "devDependencies": {
+    "@types/estree": "^1.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
