--- a/.env
+++ b/.env
@@ -12,8 +12,8 @@ NEXT_APPWRITE_KEY=standard_cb2182da80ff227de9c85431020084a40ca8428c7059810e30483
 
 #PLAID
 PLAID_CLIENT_ID=67f8e5ff568ea000229ae703
-PLAID_SECRET=d1dc41f0bedc7a58e2b99e7c130450
-PLAID_ENV=sandbox
+PLAID_SECRET=379bfbefd075f865d61e1fb2f4fa97
+PLAID_ENV=production
 PLAID_PRODUCTS=auth,transactions,identity
 PLAID_COUNTRY_CODES=US,CA
 
